--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ color: #404bbf;
     border-radius: 4px;
     padding: 16px 32px;
     border: none;
+    display: block;
 
 
 }
@@ -137,10 +138,14 @@ color: #404bbf;
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.hidden {
+    visibility: hidden;
+}
 .list {
     display: flex;
     gap: 24px;
     margin: 0 auto;
+    
 }
 .section-two {
     font-size: 20px;
@@ -149,7 +154,7 @@ color: #404bbf;
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-
+    width: calc((100% - 72px) / 4);
 
 }
 .section-two-text {
@@ -241,6 +246,7 @@ color: #404bbf;
 .footer {
         background-color: #2e2f42;
         margin-top: 120px;
+        padding: 100px 0;
     }
 .footer-text {
     color: #f4f4fd;
@@ -249,6 +255,7 @@ color: #404bbf;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
 .footer > .logo > .logo-studio {
     color: #f4f4fd;
