--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
 }
 .navigation:hover,
 .navigation:focus {
@@ -138,7 +139,7 @@ color: #404bbf;
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.hidden {
+.visually-hidden {
     visibility: hidden;
 }
 .list {
@@ -156,6 +157,9 @@ color: #404bbf;
     margin-bottom: 8px;
     width: calc((100% - 72px) / 4);
 
+}
+.section-two-list {
+    width: calc((100% - 72px) / 4);
 }
 .section-two-text {
     font-size: 16px;
