--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,10 @@ color: #404bbf;
     padding-bottom: 8px;
     
 }
+.team-img {
+    border-radius: 0px 0px 4px 4px;
+    padding: 32px 0;
+}
 .section-three-name {
     font-weight: 500;
     font-size: 20px;
