--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,11 @@ color: #404bbf;
     margin-top: 120px;
     margin-bottom: 72px;
 }
+.app {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 .portfolio-list {
     padding: 32px 16px;
     border: 1px solid #e7e9fc; 
