--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ color: #404bbf;
     text-decoration: none;
 }
 .logo-foot {
-    olor: #4d5ae5;
+    color: #4d5ae5;
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-style: normal;
