--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ color: #404bbf;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .section-four-text {
     font-size: 16px;
